Edited DF on GINI INDEX

--- a/hate_crime.ipynb
+++ b/hate_crime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
        "4                      Anti-White   Individual  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -618,7 +618,7 @@
        "136968              Anti-American Indian or Alaska Native   Individual  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -707,7 +707,7 @@
        "4       Michigan                    315"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "4     14.976798                             0.880476  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -924,8 +924,7 @@
        "      <th>Unemployment Rate</th>\n",
        "      <th>Poverty Rate</th>\n",
        "      <th>Share of Population with HS Diploma</th>\n",
-       "      <th>Gini Index_x</th>\n",
-       "      <th>Gini Index_y</th>\n",
+       "      <th>Gini Index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -939,7 +938,6 @@
        "      <td>14.976798</td>\n",
        "      <td>0.880476</td>\n",
        "      <td>0.467</td>\n",
-       "      <td>0.467</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -950,7 +948,6 @@
        "      <td>8.723823</td>\n",
        "      <td>14.508665</td>\n",
        "      <td>0.840683</td>\n",
-       "      <td>0.502</td>\n",
        "      <td>0.502</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -963,7 +960,6 @@
        "      <td>9.672161</td>\n",
        "      <td>0.819232</td>\n",
        "      <td>0.465</td>\n",
-       "      <td>0.465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -975,7 +971,6 @@
        "      <td>10.643638</td>\n",
        "      <td>0.843351</td>\n",
        "      <td>0.468</td>\n",
-       "      <td>0.468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -986,7 +981,6 @@
        "      <td>12.574643</td>\n",
        "      <td>15.984438</td>\n",
        "      <td>0.822129</td>\n",
-       "      <td>0.453</td>\n",
        "      <td>0.453</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1008,15 +1002,15 @@
        "3           8.453433     10.643638                             0.843351   \n",
        "4          12.574643     15.984438                             0.822129   \n",
        "\n",
-       "   Gini Index_x  Gini Index_y  \n",
-       "0         0.467         0.467  \n",
-       "1         0.502         0.502  \n",
-       "2         0.465         0.465  \n",
-       "3         0.468         0.468  \n",
-       "4         0.453         0.453  "
+       "   Gini Index  \n",
+       "0       0.467  \n",
+       "1       0.502  \n",
+       "2       0.465  \n",
+       "3       0.468  \n",
+       "4       0.453  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1020,7 @@
     "gini2009_csv = pd.read_csv('Resources/GINI2009.csv')\n",
     "\n",
     "# Merge csv with census DF on State.\n",
-    "census_df = census_df.merge(gini2009_csv, how='left', on='State')\n",
+    "census_df = pd.merge(census_df, gini2009_csv, how='left', on='State')\n",
     "\n",
     "# Merge Hate Crime DF with census DF.\n",
     "clean_hate_crime_2009_df = pd.merge(state_hatecrime_2009_df, census_df, how=\"left\", on=\"State\")\n",
@@ -1035,172 +1029,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>INCIDENT_ID</th>\n",
-       "      <th>DATA_YEAR</th>\n",
-       "      <th>INCIDENT_DATE</th>\n",
-       "      <th>PUB_AGENCY_NAME</th>\n",
-       "      <th>AGENCY_TYPE_NAME</th>\n",
-       "      <th>STATE_ABBR</th>\n",
-       "      <th>STATE_NAME</th>\n",
-       "      <th>POPULATION_GROUP_DESC</th>\n",
-       "      <th>TOTAL_OFFENDER_COUNT</th>\n",
-       "      <th>TOTAL_INDIVIDUAL_VICTIMS</th>\n",
-       "      <th>LOCATION_NAME</th>\n",
-       "      <th>BIAS_DESC</th>\n",
-       "      <th>VICTIM_TYPES</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>186860</th>\n",
-       "      <td>279156</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>29-Oct-17</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>City</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>Cities from 250,000 thru 499,999</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Amusement Park</td>\n",
-       "      <td>Anti-White</td>\n",
-       "      <td>Individual</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186861</th>\n",
-       "      <td>194491</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>22-Dec-17</td>\n",
-       "      <td>Juneau</td>\n",
-       "      <td>City</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>Cities from 25,000 thru 49,999</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Residence/Home</td>\n",
-       "      <td>Anti-White</td>\n",
-       "      <td>Individual</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186862</th>\n",
-       "      <td>194492</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>24-Oct-17</td>\n",
-       "      <td>Juneau</td>\n",
-       "      <td>City</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>Cities from 25,000 thru 49,999</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>School-College/University</td>\n",
-       "      <td>Anti-Multiple Races, Group</td>\n",
-       "      <td>Government</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186863</th>\n",
-       "      <td>194686</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>4-May-17</td>\n",
-       "      <td>State Troopers</td>\n",
-       "      <td>State Police</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>Alaska</td>\n",
-       "      <td>Non-MSA counties 100,000 or over</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Church/Synagogue/Temple/Mosque</td>\n",
-       "      <td>Anti-Other Christian</td>\n",
-       "      <td>Religious Organization</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186864</th>\n",
-       "      <td>280686</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>31-Jan-17</td>\n",
-       "      <td>Hoover</td>\n",
-       "      <td>City</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Cities from 50,000 thru 99,000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Grocery/Supermarket</td>\n",
-       "      <td>Anti-Hispanic or Latino</td>\n",
-       "      <td>Individual</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        INCIDENT_ID  DATA_YEAR INCIDENT_DATE PUB_AGENCY_NAME AGENCY_TYPE_NAME  \\\n",
-       "186860       279156       2017     29-Oct-17       Anchorage             City   \n",
-       "186861       194491       2017     22-Dec-17          Juneau             City   \n",
-       "186862       194492       2017     24-Oct-17          Juneau             City   \n",
-       "186863       194686       2017      4-May-17  State Troopers     State Police   \n",
-       "186864       280686       2017     31-Jan-17          Hoover             City   \n",
-       "\n",
-       "       STATE_ABBR STATE_NAME             POPULATION_GROUP_DESC  \\\n",
-       "186860         AK     Alaska  Cities from 250,000 thru 499,999   \n",
-       "186861         AK     Alaska    Cities from 25,000 thru 49,999   \n",
-       "186862         AK     Alaska    Cities from 25,000 thru 49,999   \n",
-       "186863         AK     Alaska  Non-MSA counties 100,000 or over   \n",
-       "186864         AL    Alabama    Cities from 50,000 thru 99,000   \n",
-       "\n",
-       "        TOTAL_OFFENDER_COUNT  TOTAL_INDIVIDUAL_VICTIMS  \\\n",
-       "186860                     1                       1.0   \n",
-       "186861                     1                       1.0   \n",
-       "186862                     0                       NaN   \n",
-       "186863                     0                       NaN   \n",
-       "186864                     0                       1.0   \n",
-       "\n",
-       "                         LOCATION_NAME                   BIAS_DESC  \\\n",
-       "186860                  Amusement Park                  Anti-White   \n",
-       "186861                  Residence/Home                  Anti-White   \n",
-       "186862       School-College/University  Anti-Multiple Races, Group   \n",
-       "186863  Church/Synagogue/Temple/Mosque        Anti-Other Christian   \n",
-       "186864             Grocery/Supermarket     Anti-Hispanic or Latino   \n",
-       "\n",
-       "                  VICTIM_TYPES  \n",
-       "186860              Individual  \n",
-       "186861              Individual  \n",
-       "186862              Government  \n",
-       "186863  Religious Organization  \n",
-       "186864              Individual  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter DF for 2017 only.\n",
     "reduced_hate_crime_2017_df = reduced_hate_crime_df.loc[(reduced_hate_crime_df['DATA_YEAR'] == 2017)]\n",
@@ -1209,78 +1040,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATE_ABBR</th>\n",
-       "      <th>Hate_Crimes_Committed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>1094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NY</td>\n",
-       "      <td>554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>WA</td>\n",
-       "      <td>511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NJ</td>\n",
-       "      <td>499</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MI</td>\n",
-       "      <td>457</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  STATE_ABBR  Hate_Crimes_Committed\n",
-       "0         CA                   1094\n",
-       "1         NY                    554\n",
-       "2         WA                    511\n",
-       "3         NJ                    499\n",
-       "4         MI                    457"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create new DF for 2017 from value counts. Total number of hate crimes committed per state.\n",
     "states2017 = reduced_hate_crime_2017_df['STATE_NAME'].value_counts(sort=True)\n",
