Removed Combined_Summary xlxs file output

--- a/hate_crime.ipynb
+++ b/hate_crime.ipynb
@@ -5138,8 +5138,7 @@
     "combined_summary_df = summary_2009_df.append(summary_2017_df, ignore_index=True)\n",
     "combined_summary_df = combined_summary_df.groupby(['Year', 'State']).sum()\n",
     "combined_summary_df = combined_summary_df.sort_values(by=['Year','Share per State (%)'], ascending=False)\n",
-    "combined_summary_df.head()\n",
-    "combined_summary_df.to_excel('combined_summary_df.xlsx')"
+    "combined_summary_df.head()"
    ]
   },
   {
