Edited File Destination Paths to accomodate new folders

--- a/hate_crime.ipynb
+++ b/hate_crime.ipynb
@@ -739,7 +739,7 @@
     "# Read in GINI index for 2009.\n",
     "# Note: A higher Gini index indicates greater inequality,\n",
     "# with high income individuals receiving much larger percentages of the total income of the population.\n",
-    "gini2009_csv = pd.read_csv('Resources/GINI2009.csv')\n",
+    "gini2009_csv = pd.read_csv('Resources/Gini Index CSV/GINI2009.csv')\n",
     "\n",
     "# Merge csv with census DF on State.\n",
     "census_df = pd.merge(census_df, gini2009_csv, how='left', on='State')\n",
@@ -1510,7 +1510,7 @@
    ],
    "source": [
     "# Read in GINI index for 2017.\n",
-    "gini2017_csv = pd.read_csv('Resources/GINI2017.csv')\n",
+    "gini2017_csv = pd.read_csv('Resources/Gini Index CSV/GINI2017.csv')\n",
     "\n",
     "# Merge csv with census DF on State.\n",
     "census_df = pd.merge(census_df, gini2017_csv, how='left', on='State')\n",
@@ -3718,7 +3718,7 @@
     "ax.plot(x, pcincome_fit, 'b-', c='r')\n",
     "ax.grid()\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Per Capita Income - 2009.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Per Capita Income - 2009.png')\n",
     "plt.show()"
    ]
   },
@@ -3766,7 +3766,7 @@
     "ax.plot(x, y, linewidth=0, marker='o')\n",
     "ax.plot(x, midincome_fit, 'b-', c='r')\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Median Household Income - 2009.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Median Household Income - 2009.png')\n",
     "plt.show()"
    ]
   },
@@ -3814,7 +3814,7 @@
     "ax.plot(x, y, linewidth=0, marker='o')\n",
     "ax.plot(x, unemp_fit, 'b-', c='r')\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Unemployment Rate - 2009.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Unemployment Rate - 2009.png')\n",
     "plt.show()"
    ]
   },
@@ -3862,7 +3862,7 @@
     "ax.plot(x, y, linewidth=0, marker='o')\n",
     "ax.plot(x, pov_fit, 'b-', c='r')\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Poverty Rate - 2009.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Poverty Rate - 2009.png')\n",
     "plt.show()"
    ]
   },
@@ -3910,7 +3910,7 @@
     "ax.plot(x, y, linewidth=0, marker='o')\n",
     "ax.plot(x, gini_fit, 'b-', c='r')\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Gini Index - 2009.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Gini Index - 2009.png')\n",
     "plt.show()"
    ]
   },
@@ -4821,7 +4821,7 @@
     "# Remove DC from graph.\n",
     "plt.ylim(bottom=0, top=10)\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Per Capita Income - 2017.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Per Capita Income - 2017.png')\n",
     "plt.show()"
    ]
   },
@@ -4870,7 +4870,7 @@
     "# Remove DC from graph.\n",
     "plt.ylim(top=10)\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Median Household Income - 2017.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Median Household Income - 2017.png')\n",
     "plt.show()"
    ]
   },
@@ -4919,7 +4919,7 @@
     "# Remove DC from graph.\n",
     "plt.ylim(top=10)\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Unemployment Rate - 2017.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Unemployment Rate - 2017.png')\n",
     "plt.show()"
    ]
   },
@@ -4968,7 +4968,7 @@
     "# Remove DC from graph.\n",
     "plt.ylim(top=10)\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Poverty Rate - 2017.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Poverty Rate - 2017.png')\n",
     "plt.show()"
    ]
   },
@@ -5017,7 +5017,7 @@
     "# Remove DC from graph.\n",
     "plt.ylim(bottom=0, top=10)\n",
     "\n",
-    "plt.savefig('Images/Hate Crime Rate vs. Gini Index - 2017.png')\n",
+    "plt.savefig('Images/Zach/Hate Crime Rate vs. Gini Index - 2017.png')\n",
     "plt.show()"
    ]
   },
@@ -5077,7 +5077,7 @@
     "plt.ylim(0, max(crime_count_2017)+50)\n",
     "plt.legend()\n",
     "\n",
-    "plt.savefig(\"Images/Hate_Crime_Count_per_State_2009_2017\", bbox_inches='tight')\n",
+    "plt.savefig(\"Images/Group Images/Hate_Crime_Count_per_State_2009_2017\", bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -5124,7 +5124,7 @@
     "plt.ylim(0, max(crime_rate_2017)+2)\n",
     "plt.legend()\n",
     "\n",
-    "plt.savefig(\"Images/Hate_Crime_Rate_per_State_2009_2017\", bbox_inches='tight')\n",
+    "plt.savefig(\"Images/Group Images/Hate_Crime_Rate_per_State_2009_2017\", bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -5151,8 +5151,8 @@
     "combined_top5_summary_df = max_incidents_2009.append(max_incidents_2017, ignore_index=True)\n",
     "combined_top5_summary_df = combined_top5_summary_df.groupby(['Year', 'State']).sum()\n",
     "#combined_top5_summary_df\n",
-    "max_incidents_2009.to_excel('max_incidents_2009.xlsx')\n",
-    "max_incidents_2017.to_excel('max_incidents_2017.xlsx')\n",
+    "max_incidents_2009.to_excel('Resources/Presentation Tables/max_incidents_2009.xlsx')\n",
+    "max_incidents_2017.to_excel('Resources/Presentation Tables/max_incidents_2017.xlsx')\n",
     "#combined_top5_summary_df.to_excel('combined_top5_count.xlsx')"
    ]
   },
@@ -5168,8 +5168,8 @@
     "max_rate_2017 = summary_2017_df.sort_values(by='Hate Crime Rate per 100,000 Population', ascending=False)\n",
     "max_rate_2017 = max_rate_2017.reset_index(drop=True)\n",
     "max_rate_2017 = max_rate_2017.head()\n",
-    "max_rate_2009.to_excel('max_rate_2009.xlsx')\n",
-    "max_rate_2017.to_excel('max_rate_2017.xlsx')\n"
+    "max_rate_2009.to_excel('Resources/Presentation Tables/max_rate_2009.xlsx')\n",
+    "max_rate_2017.to_excel('Resources/Presentation Tables/max_rate_2017.xlsx')\n"
    ]
   },
   {
@@ -5343,7 +5343,7 @@
     "plt.xlabel('2017')\n",
     "plt.ylabel('Hate Crime Rate per 100,000 Population')\n",
     "\n",
-    "plt.savefig('Images/DC_boxplot_2017.png')"
+    "plt.savefig('Images/Group Images/DC_boxplot_2017.png')"
    ]
   },
   {
