--- a/max code book.ipynb
+++ b/max code book.ipynb
@@ -91,8 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"hate_crime_socioeconomic_2017.csv\")\n",
-    "\n",
+    "df=pd.read_csv(\"Resources/hate_crime_socioeconomic_2017.csv\")\n",
     "df.head()\n",
     "\n",
     "ppf=df['Poverty Rate']\n",
@@ -105,7 +104,7 @@
     "\n",
     "interactive3df=pd.DataFrame({\"State\":sf, \"Share of Population with HS Diploma\":rf, \"Hate Crime Rate\":zf})\n",
     "\n",
-    "interactive3df.to_csv(\"interactive3df.csv\")\n"
+    "interactive3df.to_csv(\"interactive3df.csv\")"
    ]
   },
   {
@@ -114,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddf=pd.read_csv(\"hate_crime_socioeconomic_2009.csv\")\n",
+    "ddf=pd.read_csv(\"Resources/hate_crime_socioeconomic_2009.csv\")\n",
     "\n",
     "ddf.head()\n",
     "\n",
@@ -501,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
