Edited Image Paths

--- a/hate_crime.ipynb
+++ b/hate_crime.ipynb
@@ -3766,7 +3766,7 @@
     "ax.plot(x, y, linewidth=0, marker='o')\n",
     "ax.plot(x, midincome_fit, 'b-', c='r')\n",
     "\n",
-    "plt.savefig('Images/Zach/Hate Crime Rate vs. Median Household Income - 2009.png')\n",
+    "# plt.savefig('Images/Zach/Hate Crime Rate vs. Median Household Income - 2009.png')\n",
     "plt.show()"
    ]
   },
@@ -3814,7 +3814,7 @@
     "ax.plot(x, y, linewidth=0, marker='o')\n",
     "ax.plot(x, unemp_fit, 'b-', c='r')\n",
     "\n",
-    "plt.savefig('Images/Zach/Hate Crime Rate vs. Unemployment Rate - 2009.png')\n",
+    "# plt.savefig('Images/Zach/Hate Crime Rate vs. Unemployment Rate - 2009.png')\n",
     "plt.show()"
    ]
   },
@@ -4870,7 +4870,7 @@
     "# Remove DC from graph.\n",
     "plt.ylim(top=10)\n",
     "\n",
-    "plt.savefig('Images/Zach/Hate Crime Rate vs. Median Household Income - 2017.png')\n",
+    "# plt.savefig('Images/Zach/Hate Crime Rate vs. Median Household Income - 2017.png')\n",
     "plt.show()"
    ]
   },
@@ -4919,7 +4919,7 @@
     "# Remove DC from graph.\n",
     "plt.ylim(top=10)\n",
     "\n",
-    "plt.savefig('Images/Zach/Hate Crime Rate vs. Unemployment Rate - 2017.png')\n",
+    "# plt.savefig('Images/Zach/Hate Crime Rate vs. Unemployment Rate - 2017.png')\n",
     "plt.show()"
    ]
   },
@@ -5152,8 +5152,7 @@
     "combined_top5_summary_df = combined_top5_summary_df.groupby(['Year', 'State']).sum()\n",
     "#combined_top5_summary_df\n",
     "max_incidents_2009.to_excel('Resources/Presentation Tables/max_incidents_2009.xlsx')\n",
-    "max_incidents_2017.to_excel('Resources/Presentation Tables/max_incidents_2017.xlsx')\n",
-    "#combined_top5_summary_df.to_excel('combined_top5_count.xlsx')"
+    "max_incidents_2017.to_excel('Resources/Presentation Tables/max_incidents_2017.xlsx')"
    ]
   },
   {
